fix minor login text alignment

--- a/WMS-Hoya/src/styles/login.css
+++ b/WMS-Hoya/src/styles/login.css
@@ -32,7 +32,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center; 
-  text-align: center;
   height: 95vh;
   width: 49vw;
   /* width: 340px; */
